# functionalscript

./: .gitignore  .npmignore  1.txt  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LANGUAGE.md  LICENSE  MIGRATION.md  PROJECT_OVERVIEW.md  Package.swift  Program.cs  QUICK_START.md  README.md  deno-test  deno.json  denotest.mjs  f.js  fs.sln  fsc.ts  funding.json  index.f.cjs  index.f.js  index.f.mjs  index.js  index.ts  jsr.json  main.f.cjs  main.f.js  main.ts  module.f.cjs  module.f.mjs  module.f.ts  package-lock.json  package.d.mjs  package.json  (+8 more)
.cargo/: config.toml  config.wasmer.toml
.github/: FUNDING.yml
array/: index.js  module.f.ts
async/: index.js  test.js
bnf/: README.md  module.f.ts  test.f.ts  testlib.f.ts
btree/: index.js  test.js
cas/: module.f.ts
ci/: README.md  module.f.ts  module.ts
cmp/: index.js
com/: README.md  index.f.js  main.f.cjs  main.f.js  module.f.cjs  proposals.md  test.f.js
com/rust/nanocom/: Cargo.toml  README.md
com/rust/nanocom/rstest/: Cargo.toml
com/rust/nanocom/rstest/src/: lib.rs
com/rust/nanocom/src/: class.rs  cobject.rs  guid.rs  interface.rs  iunknown.rs  lib.rs  object.rs  ref.rs  vmt.rs
com/rust/nanocom/tests/: it.rs  itmod.rs
commonjs/: README.md  f.js  index.f.js  index.js  main.f.cjs  main.f.js  module.cjs  module.f.cjs  module.f.js  module.f.mjs  module.f.ts  module.mjs  module.ts  test.cjs  test.mjs  test.ts
crypto/: DeterministicDSA.java  README.md
cs/: main.f.js  test.f.js
deno/: README.md  all.test.ts  module.ts  test.ts
(+2577 files in other folders)
