[package]
name = "nanocom"
version = "0.2.0"
edition = "2021"
description = "Nano-COM, extremly small subset of cross-platform COM"
authors = ["NatFoam"]
license = "MIT"
homepage = "https://github.com/functionalscript/functionalscript/tree/main/com/rust/nanocom"
repository = "https://github.com/functionalscript/functionalscript"
keywords = ["com", "xpcom", "abi"]
categories = ["development-tools::ffi", "external-ffi-bindings", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
